k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-backend-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internal # el ALB solo es accesible desde dentro de la VPC/intranet
    alb.ingress.kubernetes.io/target-type: ip # el ALB enviará tráfico a los pods usando sus IPs
    alb.ingress.kubernetes.io/healthcheck-path: /healthz # ruta para las verificaciones de salud
spec:
  ingressClassName: alb # especifica que este Ingress debe ser manejado por el controlador ALB
  rules:
    - host: crud-backend.internal.crud-devops-pipeline.local # hostname que ExternalDNS va a registrar en Route53
      http:
        paths:
          - path: / # cualquier ruta que comience con / será dirigida al backend
            pathType: Prefix
            backend:
              service:
                name: crud-backend-svc
                port: 
                  name: http
# que hace este ingress
# Este Ingress configura un Application Load Balancer (ALB) en AWS para dirigir el tráfico HTTP entrante
# hacia el servicio `crud-backend-svc` en el namespace `dev`.
